--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "This is a cli app that will help you find what flights are leaving your nearby airport",
   "main": "bin/flightTracker.js",
   "bin": {
-    "flighttracker": "./bin/flightTracker.js"
+    "flighttracker": "./bin/flightTrackerCLI.js"
   },
   "scripts": {
     "test": "jest",
-    "start": "node ./bin/flightTracker.js"
+    "start": "node ./bin/flightTrackerCLI.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
+    "@inquirer/prompts": "^7.2.4",
     "axios": "^1.7.9",
     "chalk": "^4.1.2",
     "yargs": "^17.7.2"
