Refactor airport data processing: create GenerateAirportsFile script and update workflow to generate Airports.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest",
     "start": "node ./bin/flightTrackerCLI.js",
-    "processRawFlightData": "node ./flightData/scripts/index.js"
+    "processRawFlightData": "node ./flightData/scripts"
   },
   "repository": {
     "type": "git",
