--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -28,6 +28,9 @@ jobs:
           node-version: 20
           registry-url: https://registry.npmjs.org/
       - run: npm ci
+      - name: Generate Airports.json and upload artifact
+        run: |
+          npm run processRawFlightData
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
